добавлено: 1.docker контейнеризация с базой 2.регистрация, авторизация по jwt токену и аутентификация 3.юнит тесты для AuthorService с использованием заданных значений без использования базы 4.добавлены фичи в authorservice