@@ -7,101 +7,112 @@ import com.example.avitorest1.repository.AuthorRepository;
 import com.example.avitorest1.repository.PostRepository;
 import com.example.avitorest1.request.PostRequest;
 import com.example.avitorest1.response.PostResponse;
-import jakarta.annotation.PostConstruct;
-import jakarta.annotation.PreDestroy;
 import jakarta.transaction.Transactional;
 import lombok.RequiredArgsConstructor;
-import lombok.extern.slf4j.Slf4j;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
-import org.springframework.cache.annotation.Cacheable;
+import org.springframework.security.access.AccessDeniedException;
+import org.springframework.security.core.Authentication;
+import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
-@Slf4j
 @Service
 @Transactional
 @RequiredArgsConstructor
 public class PostService {
-    final Logger logger = LoggerFactory.getLogger(PostService.class);
     private final PostRepository postRepository;
-    private final PostMapper postMapper;
-    private final AuthorService authorService;
-    private final AuthorRepository authorRepository;
 
-    @PostConstruct
-    public void preInit() {
-        logger.info("\nPre Init post");
+    private final PostMapper postMapper;
+    private final AuthorRepository authorRepository;
+    private final Logger logger = LoggerFactory.getLogger(PostService.class);
+
+    private void validateAuthentication() {
+        Authentication authentication = SecurityContextHolder.getContext().getAuthentication();
+        if (authentication == null || !authentication.isAuthenticated()) {
+            throw new RuntimeException("Требуется аутентификация");
+        }
+        logger.info("Пользователь аутентифицирован: {}", authentication.getName());
     }
 
-    @Cacheable(value = "post")
-    public void createPost(PostRequest postRequest) {
-        if (postRequest == null) {
-            throw new IllegalArgumentException("\nпост не может быть null");
-        }
-        Long authorId = postRequest.getAuthor().getId();
-        AuthorEntity author = authorRepository.findById(authorId).orElseThrow(() -> {
-            logger.warn("\nнет автора с {} базе", authorId);
-            return new IllegalArgumentException("\nНет автора c Id: " + authorId);
-        });
+    public PostResponse createPost(PostRequest postRequest, String username) {
+        validateAuthentication();
+        AuthorEntity author = authorRepository.findByUsername(username)
+                .orElseThrow(() -> new RuntimeException("Автор не найден"));
+
         PostEntity postEntity = postMapper.mapPost(postRequest);
         postEntity.setAuthor(author);
-        logger.info("\nсоздаем пост: \nauthorEmail = " + postEntity.getAuthor().getEmail() + ", postId = " + postEntity.getId() + ", postName = " + postEntity.getName() + ", postDescription = " + postEntity.getDescription() + ", postDate = " + postEntity.getDate());
-        postRepository.save(postEntity);
+        PostEntity savedPost = postRepository.save(postEntity);
+        logger.info("Пост создан автором: {}", username);
+        return postMapper.mapPostResponse(savedPost);
     }
 
-    @Transactional
-    public List<PostResponse> getAllPosts(Integer limit) {
+    public List<PostResponse> getAllPosts() {
+        validateAuthentication();
 
-        List<PostEntity> postEntities = postRepository.findAll().stream().limit(limit != null && limit > 0 ? limit : Integer.MAX_VALUE).collect(Collectors.toList());
-        logger.info("\nПолучаем все посты с лимитом {}", limit);
-        logger.info(postEntities.stream().map(post -> "\nPost{id=" + post.getId() + ", " + " name='" + post.getName() + "', " + " category='" + post.getCategory() + " authorEmail='" + post.getAuthor().getEmail() + "'}").collect(Collectors.joining(", ")));
-        return postMapper.toPostResponseList(postEntities);
+        return postRepository.findAll().stream()
+                .map(postMapper::mapPostResponse)
+                .toList();
     }
 
-    public PostResponse getPost(Long postId) {
-        logger.info("\nПолучаем пост по id {}", postId);
-        PostEntity postEntity = postRepository.findById(postId).orElse(null);
-        logger.info("\nПост");
-        return postMapper.toPostResponse(postEntity);
+    public List<PostResponse> getPostsByAuthorId(Long authorId) {
+        validateAuthentication();
+        return postRepository.findAllByAuthorId(authorId).stream()
+                .map(postMapper::mapPostResponse)
+                .toList();
     }
 
-    public long getAllPostsCount() {
-        return postRepository.count();
+    public PostResponse getPostById(Long id) {
+        validateAuthentication();
+        PostEntity postEntity = postRepository.findById(id)
+                .orElseThrow(() -> new RuntimeException("Пост не найден"));
+        return postMapper.mapPostResponse(postEntity);
     }
 
-    public PostResponse updatePost(Long postId, PostRequest postRequest) {
-        logger.info("\nОбновляем пост по id {}", postId);
-        PostEntity postEntity = postRepository.findById(postId).orElseThrow(() -> new IllegalArgumentException("Пост с id " + postId + " не найден"));
+    public PostResponse updatePost(Long id, PostRequest postRequest, String username) {
+        validateAuthentication();
+        PostEntity postEntity = postRepository.findById(id)
+                .orElseThrow(() -> new RuntimeException("Пост не найден"));
+
+        // Проверяем, является ли пользователь автором поста или администратором
+        boolean isAdmin = SecurityContextHolder.getContext().getAuthentication()
+                .getAuthorities().stream()
+                .anyMatch(a -> a.getAuthority().equals("ROLE_ADMIN"));
+
+        if (!isAdmin && !postEntity.getAuthor().getUsername().equals(username)) {
+            logger.warn("Пользователь {} попытался обновить пост {} принадлежащий {}", 
+                username, id, postEntity.getAuthor().getUsername());
+            throw new AccessDeniedException("Вы можете обновить только свои посты");
+        }
+
         postEntity.setName(postRequest.getName());
         postEntity.setDescription(postRequest.getDescription());
         postEntity.setPrice(postRequest.getPrice());
-        postEntity.setDate(postRequest.getDate());
         postEntity.setCategory(postRequest.getCategory());
 
-        if (postRequest.getAuthor() != null && postRequest.getAuthor().getId() != null) {
-            AuthorEntity author = authorRepository.findById(postRequest.getAuthor().getId()).orElseThrow(() -> new IllegalArgumentException("Автор не найден"));
-            postEntity.setAuthor(author);
+        PostEntity updatedPost = postRepository.save(postEntity);
+        logger.info("Пост {} обновлен пользователем {}", id, username);
+        return postMapper.mapPostResponse(updatedPost);
+    }
+
+    public void deletePost(Long id, String username) {
+        validateAuthentication();
+        PostEntity postEntity = postRepository.findById(id)
+                .orElseThrow(() -> new RuntimeException("Пост не найден"));
+
+        // Проверяем, является ли пользователь автором поста или администратором
+        boolean isAdmin = SecurityContextHolder.getContext().getAuthentication()
+                .getAuthorities().stream()
+                .anyMatch(a -> a.getAuthority().equals("ROLE_ADMIN"));
+
+        if (!isAdmin && !postEntity.getAuthor().getUsername().equals(username)) {
+            logger.warn("Пользователь {} попытался удалить пост {} принадлежащий {}", 
+                username, id, postEntity.getAuthor().getUsername());
+            throw new AccessDeniedException("Вы можете удалить только свои посты");
         }
 
-        PostEntity updatedPost = postRepository.save(postEntity);
-        logger.info("Пост {} успешно обновлен", postId);
-
-        return postMapper.toPostResponse(updatedPost);
+        postRepository.delete(postEntity);
+        logger.info("Пост {} удален пользователем {}", id, username);
     }
-
-    public void deletePost(Long postId) {
-        logger.info("\nDelete Post by id {}", postId);
-        postRepository.deleteById(postId);
-
-    }
-
-    @PreDestroy
-    public void preDestroy() {
-        logger.info("Pre Destroy post");
-    }
-
-
 }
